# SkillFul

./: .editorconfig  .gitignore  AGENTS.md  Cargo.toml  README.md  project_proposal.md  skills.toml
.cargo/: config.toml
docs/superpowers/plans/: 2026-06-28-phase-1-completion.md  2026-06-29-reframed-local-mvp.md
src/: cli.rs  config.rs  db.rs  event.rs  main.rs  privacy.rs  recommend.rs  stats.rs
src/adapters/: claude_code.rs  codex.rs  hermes.rs  mod.rs  openclaw.rs  opencode.rs
src/export/: jsonl.rs  mod.rs  otel.rs
src/mcp/: server.rs  tools.rs
tests/: mcp.rs  privacy.rs  skills_resolution.rs  wrap.rs
tmp/: plan.md
